--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0A5B98</color>
-    <color name="colorPrimaryDark">#DA1917</color>
+    <color name="colorPrimaryDark">#3D3D3D</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColorSecondary">#000000</color>
     <color name="colorAccent">#3395ff</color>
