--- a/app/src/main/res/layout/frag_investment_question_landscape.xml
+++ b/app/src/main/res/layout/frag_investment_question_landscape.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/question_textView"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/question_max_height"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/question_margin_top"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/activity_vertical_margin"
         android:maxWidth="@dimen/tab_max_width"
         android:elevation="@dimen/elevation"
+        android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
         android:textSize="22sp" />
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/question_textView"
-        android:layout_marginTop="@dimen/radio_margin_top_2"
+        android:layout_toEndOf="@id/question_textView"
+        android:layout_marginStart="@dimen/radio_marginstart"
+        android:layout_centerVertical="true"
         android:maxWidth="@dimen/tab_max_width"
         android:orientation="vertical">
 
@@ -40,6 +41,23 @@
             android:elevation="@dimen/elevation"
             android:buttonTint="@color/colorAccent" />
 
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/radio_button_size"
+            android:textSize="20sp"
+            android:elevation="@dimen/elevation"
+            android:buttonTint="@color/colorAccent" />
+
+        <RadioButton
+            android:id="@+id/radioButton4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/radio_button_size"
+            android:textSize="20sp"
+            android:elevation="@dimen/elevation"
+            android:buttonTint="@color/colorAccent" />
     </RadioGroup>
 
 </RelativeLayout>
