--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,10 +21,9 @@
 
     <dimen name="question_margin_top">80dp</dimen>
     <dimen name="question_max_height">180dp</dimen>
-    <dimen name="radio_margin_top_2">100dp</dimen>
-    <dimen name="radio_margin_top_3">85dp</dimen>
     <dimen name="radio_margin_top_4">70dp</dimen>
     <dimen name="radio_button_size">30dp</dimen>
+    <dimen name="radio_marginstart">70dp</dimen>
 
     <dimen name="elevation">5dp</dimen>
 
