--- a/app/src/main/res/layout/ring_background_left.xml
+++ b/app/src/main/res/layout/ring_background_left.xml
@@ -8,7 +8,9 @@
         android:layout_height="420dp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:background="@drawable/semicircleleftblue" />
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:adjustViewBounds="true"
+        android:src="@drawable/semicircleleftblue" />
 
     <ImageView
         android:id="@+id/semicirclewhite1"
@@ -16,6 +18,8 @@
         android:layout_height="380dp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="@dimen/img_ring_margin"
-        android:background="@drawable/semicircleleftwhite" />
+        android:layout_marginBottom="@dimen/img_ring_margin"
+        android:adjustViewBounds="true"
+        android:src="@drawable/semicircleleftwhite" />
 
 </RelativeLayout>
