--- a/app/src/main/res/layout/ring_background_right.xml
+++ b/app/src/main/res/layout/ring_background_right.xml
@@ -8,7 +8,9 @@
         android:layout_height="420dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:background="@drawable/semicirclerightblue" />
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:adjustViewBounds="true"
+        android:src="@drawable/semicirclerightblue" />
 
     <ImageView
         android:id="@+id/semicirclewhite2"
@@ -16,6 +18,8 @@
         android:layout_height="380dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/img_ring_margin"
-        android:background="@drawable/semicirclewhite" />
+        android:layout_marginBottom="@dimen/img_ring_margin"
+        android:adjustViewBounds="true"
+        android:src="@drawable/semicirclewhite" />
 
 </RelativeLayout>
