--- a/app/src/main/res/layout/child_item_advice.xml
+++ b/app/src/main/res/layout/child_item_advice.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textViewParent"
+        android:id="@+id/textViewChild"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:paddingBottom="10dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
-        android:paddingTop="10dp"
-        android:textAlignment="center" />
+        android:paddingTop="10dp"/>
 
 </RelativeLayout>
