--- a/app/src/main/res/layout/activity_frontpage_.xml
+++ b/app/src/main/res/layout/activity_frontpage_.xml
@@ -40,7 +40,7 @@
         app:layout_constraintVertical_bias="0.498" />
 
 
-    <ImageView
+    <ImageButton
         android:id="@+id/imageView4"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -48,6 +48,7 @@
         android:layout_alignStart="@+id/imageButton_logoRings"
         android:layout_marginBottom="9dp"
         android:scaleType="fitEnd"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
