--- a/app/src/main/res/layout-land/activity_frontpage_.xml
+++ b/app/src/main/res/layout-land/activity_frontpage_.xml
@@ -40,14 +40,15 @@
         app:layout_constraintVertical_bias="0.498" />
 
 
-    <ImageView
-        android:id="@+id/imageView4"
+    <ImageButton
+        android:id="@+id/pensionbtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/imageButton_logoRings"
         android:layout_marginBottom="9dp"
         android:scaleType="fitEnd"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -100,7 +101,7 @@
             tools:layout_editor_absoluteY="138dp" />
 
         <ImageButton
-            android:id="@+id/disp_btn"
+            android:id="@+id/advice_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/buttonshape"
