--- a/app/src/main/res/layout/activity_frontpage_.xml
+++ b/app/src/main/res/layout/activity_frontpage_.xml
@@ -41,7 +41,7 @@
 
 
     <ImageButton
-        android:id="@+id/imageView4"
+        android:id="@+id/pensionbtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
