--- a/app/src/main/res/layout/child_item_advice.xml
+++ b/app/src/main/res/layout/child_item_advice.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingBottom="10dp"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:textSize="18sp" />
 
 </RelativeLayout>
