--- a/app/src/main/res/layout/expandablelistview.xml
+++ b/app/src/main/res/layout/expandablelistview.xml
@@ -3,24 +3,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
     >
 
 
     <include layout="@layout/ring_background_right"/>
 
-<ExpandableListView
-    android:id="@+id/expandebleList"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
-    android:dividerHeight="0.5dp"
-    >
+    <ExpandableListView
+        android:id="@+id/expandebleList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="#0A5B98"
+        android:dividerHeight="2dp"
+        android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft">
 
 
-</ExpandableListView>
+    </ExpandableListView>
 
 
 </RelativeLayout>
