--- a/app/src/main/res/layout/single_item_advice.xml
+++ b/app/src/main/res/layout/single_item_advice.xml
@@ -11,6 +11,7 @@
         android:paddingBottom="10dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
         android:paddingTop="10dp"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
 </RelativeLayout>
