--- a/app/src/main/res/layout-land/activity_frontpage_.xml
+++ b/app/src/main/res/layout-land/activity_frontpage_.xml
@@ -53,14 +53,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498" />
 
-
     <ImageButton
         android:id="@+id/pensionbtn"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/imageButton_logoRings"
         android:layout_marginBottom="9dp"
+        android:layout_marginEnd="95dp"
+        android:adjustViewBounds="true"
         android:scaleType="fitEnd"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
