--- a/app/src/main/res/layout/frag_investment_result.xml
+++ b/app/src/main/res/layout/frag_investment_result.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/ring_background_right"/>
+
     <TextView
         android:id="@+id/textView_result"
         android:layout_width="wrap_content"
@@ -10,6 +12,29 @@
         android:layout_centerInParent="true"
         android:textAlignment="center"
         android:textSize="22sp"
+        android:textStyle="bold"
+        android:maxWidth="@dimen/tab_max_width"/>
+
+    <TextView
+        android:id="@+id/textView_youAre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView_result"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="4dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:maxWidth="@dimen/tab_max_width"/>
+
+    <TextView
+        android:id="@+id/textView_contactUs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView_result"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:maxWidth="@dimen/tab_max_width"/>
 
     <Button
